--- a/backend/MHIFES/src/main/resources/application.properties
+++ b/backend/MHIFES/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+# Configuração Banco Postgres (Caso for usar esse, decomente as linhas abaixo e comente as linhas do H2)
+# spring.datasource.url=jdbc:postgresql://localhost:5432/curso
+# spring.datasource.driverClassName=org.postgresql.Driver
+# spring.datasource.username=postgres
+# spring.datasource.password=123
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.show-sql=true
 
+# Configuração Banco H2 (Caso for usar esse, decomente as linhas abaixo e comente as linhas do Postgres)
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+# http://localhost:8080/h2-console/
+
+server.error.include-stacktrace=never
+server.error.include-message=never
