--- a/backend/MHIFES/src/main/resources/application.properties
+++ b/backend/MHIFES/src/main/resources/application.properties
@@ -14,5 +14,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 # http://localhost:8080/h2-console/
 
+# server.port=2900
+
 server.error.include-stacktrace=never
 server.error.include-message=never
