criando autenticacao jwt

--- a/backend/MHIFES/src/main/resources/application.properties
+++ b/backend/MHIFES/src/main/resources/application.properties
@@ -17,5 +17,7 @@ spring.jpa.hibernate.ddl-auto=create
 
 #server.port=2900
 
+api.security.token.secret=${JWT_SECRET:my-secret-key}
+
 server.error.include-stacktrace=never
 server.error.include-message=never
