--- a/backend/MHIFES/src/main/resources/application-prod.properties
+++ b/backend/MHIFES/src/main/resources/application-prod.properties
@@ -5,4 +5,4 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
