Migração de dados entre MySQL e Postgres

--- a/backend/MHIFES/src/main/resources/application-prod.properties
+++ b/backend/MHIFES/src/main/resources/application-prod.properties
@@ -3,14 +3,14 @@ postgres.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/mhifes
 postgres.datasource.driverClassName=org.postgresql.Driver
 postgres.datasource.username=postgres
 postgres.datasource.password=admin
-postgres.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-postgres.jpa.show-sql=true
-postgres.jpa.hibernate.ddl-auto=create
+postgres.datasource.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+postgres.datasource.jpa.show-sql=true
+postgres.datasource.jpa.hibernate.ddl-auto=create
 # Configuração do MySQL
-mysql.datasource.jdbcUrl=jdbc:mysql://localhost:3306/samha_novo
+mysql.datasource.jdbcUrl=jdbc:mysql://localhost:3306/samha
 mysql.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 mysql.datasource.username=root
 mysql.datasource.password=123456
-mysql.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-mysql.jpa.show-sql=true
-mysql.jpa.hibernate.ddl-auto=none
+mysql.datasource.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDialect
+mysql.datasource.jpa.show-sql=true
+mysql.datasource.jpa.hibernate.ddl-auto=none
