--- a/backend/MHIFES/src/main/resources/application-prod.properties
+++ b/backend/MHIFES/src/main/resources/application-prod.properties
@@ -7,10 +7,10 @@ postgres.datasource.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialec
 postgres.datasource.jpa.show-sql=true
 postgres.datasource.jpa.hibernate.ddl-auto=create
 # Configuração do MySQL
-mysql.datasource.jdbcUrl=jdbc:mysql://localhost:3306/samha
+mysql.datasource.jdbcUrl=jdbc:mysql://localhost:3306/samha_novo
 mysql.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 mysql.datasource.username=root
-mysql.datasource.password=123456
+mysql.datasource.password=
 mysql.datasource.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDialect
 mysql.datasource.jpa.show-sql=true
 mysql.datasource.jpa.hibernate.ddl-auto=none
